--- a/src/app/pages/home/carausel/carausel.component.html
+++ b/src/app/pages/home/carausel/carausel.component.html
@@ -15,8 +15,7 @@
         <h1>Tarjetas de Crédito</h1>
         <h2>
           Lorem Ipsum es simplemente el texto de relleno de las imprentas y
-          archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de
-          las industrias desde el año 1500
+          archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de.
         </h2>
         <a href="#about" class="btn-get-started scrollto">Solicitar</a>
       </div>
