--- a/src/app/pages/home/precio/precio.component.html
+++ b/src/app/pages/home/precio/precio.component.html
@@ -18,7 +18,7 @@
                 <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>Free Subdomain</li>
                 <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>Monthly Status Reports</li>
               </ul>
-              <a href="#" class="btn btn-block btn-success text-uppercase btn-credit-second">Button</a>
+              <a href="#" class="btn btn-block btn-success text-uppercase">Button</a>
             </div>
           </div>
         </div>
@@ -39,7 +39,7 @@
                 <li><span class="fa-li"><i class="fas fa-check"></i></span>Free Subdomain</li>
                 <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>Monthly Status Reports</li>
               </ul>
-              <a href="#" class="btn btn-block btn-success text-uppercase btn-credit-second">Button</a>
+              <a href="#" class="btn btn-block btn-success text-uppercase">Button</a>
             </div>
           </div>
         </div>
@@ -60,7 +60,7 @@
                 <li><span class="fa-li"><i class="fas fa-check"></i></span><strong>Unlimited</strong> Free Subdomains</li>
                 <li><span class="fa-li"><i class="fas fa-check"></i></span>Monthly Status Reports</li>
               </ul>
-              <a href="#" class="btn btn-block btn-success text-uppercase btn-credit-second">Button</a>
+              <a href="#" class="btn btn-block btn-success text-uppercase">Button</a>
             </div>
           </div>
         </div>
